--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png"/>
+  <link rel="manifest" href="favicon/site.webmanifest" />
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5"/>
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
   <link rel="stylesheet" href="style.css">
-  <title>Tetris</title>
+  <title>PLAY TETRIS - Edward Leung</title>
 </head>
 <body>
   
@@ -12,6 +19,7 @@
   <button id="start-button">Start/Pause</button>
 
 <div class="container">
+  <!-- GRID -->
   <div class="grid">
     <div></div>
     <div></div>
@@ -213,6 +221,7 @@
     <div></div>
     <div></div>
     <div></div>
+    
     <div class="taken"></div>
     <div class="taken"></div>
     <div class="taken"></div>
