--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
 
       <!-- Mini-Grid Container -->
-      <div class="mini-grid-container"></div>
+      <div class="mini-grid-container">
         <h4>NEXT:</h4>
         <!-- Mini-Grid -->
         <div class="mini-grid">
